Bug fix for extend converting arrays into objects

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wicker-man-utilities",
-  "version": "0.1.1",
+  "name": "@sublimemedia/wicker-man-utilities",
+  "version": "0.1.2",
   "description": "A set of utilities used by the Wicker Man components",
   "main": "./dist/wmutilities.js",
   "scripts": {
@@ -28,7 +28,6 @@
     "istanbul": "^0.3.20",
     "mocha": "^2.3.2"
   },
-  "private": true,
   "dependencies": {
     "bluebird": "^2.10.0"
   }
